<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeaconAdvertiser</string>
    <string name="beacons_list">List</string>
    <string name="scan_beacons">Scan Beacons</string>
    <string name="beacon_advertiser">Advertiser</string>
    <string name="need_bluetooth">Need bluetooth</string>
    <string name="enable">Enable</string>
    <string name="last_event">Last Event:</string>
    <string name="beacon_detail">Beacon Detail</string>


    <string name="estimote_uuid_value">F7826DA6-4FA2-4E98-8024-BC5B71E0893E</string>
    <string name="err_a5_needed">Need at least Android 5...</string>
    <string name="uuid">UUID</string>
    <string name="random_uuid">Random UUID</string>
    <string name="estimote_uuid">Estimote UUID</string>
    <string name="start">Start</string>
    <string name="mode">Mode</string>
    <string name="tx">TX</string>
    <string name="connectable">Connectable</string>
    <string name="stop">Stop</string>
</resources>
